--- a/lucy-themes/default/assets/img/styles.css
+++ b/lucy-themes/default/assets/img/styles.css
@@ -61,6 +61,9 @@ input[type="text"],input[type="email"],input[type="password"], textarea, select{
 	outline: 0;
 	box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
 	font-family: "Ubuntu", sans-serif;
+	transition:.1s linear;
+	-webkit-transition:.1s linear;
+	-moz-transition:.1s linear;
 }
 select{
 	color:#000;
@@ -91,6 +94,9 @@ input[type="submit"],input[type="reset"],button{
 	color: #fff;
 	text-decoration: none;
 	text-shadow: 0 1px 0 rgba(0,0,0,0.1);
+	transition:.1s linear;
+	-webkit-transition:.1s linear;
+	-moz-transition:.1s linear;
 }
 input[type="submit"]:hover,input[type="reset"]:hover,button:hover{
 	background-image: -webkit-gradient(linear,left top,left bottom,from(#da5e35),to(#b8431c));
@@ -103,6 +109,19 @@ input[type="submit"]:hover,input[type="reset"]:hover,button:hover{
 }
 input[type="submit"]:active,input[type="reset"]:active,button:active{
 	box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.5);
+}
+#index-wrapper{
+	overflow: hidden;
+	margin-bottom: 10px;
+}
+#index-ticket{
+	width: 45%;
+	float: left;
+	border-right: 1px solid #eee;
+}
+#index-login{
+	width: 50%;
+	float: right;
 }
 #buttons{
 	padding-bottom:10px;
