--- a/lucy-themes/default/assets/img/styles.css
+++ b/lucy-themes/default/assets/img/styles.css
@@ -12,11 +12,12 @@ body{
 	background: #FFF;
 }
 a{
-	color: #d54e21;
+	color: #e23749;
 	text-decoration: none
 }
 a:hover{
-	color: #21759b
+	color: #5baeb2;
+	text-decoration: underline;
 }
 header{
 	overflow: hidden;
@@ -81,15 +82,15 @@ input[type="submit"],input[type="reset"],button{
 	height: 30px;
 	line-height: 28px;
 	padding: 0 12px 2px;
-	background-color: #b8431c;
-	background-image: -webkit-gradient(linear,left top,left bottom,from(#d54e21),to(#b8431c));
-	background-image: -webkit-linear-gradient(top,#d54e21,#b8431c);
-	background-image: -moz-linear-gradient(top,#d54e21,#b8431c);
-	background-image: -ms-linear-gradient(top,#d54e21,#b8431c);
-	background-image: -o-linear-gradient(top,#d54e21,#b8431c);
-	background-image: linear-gradient(to bottom,#d54e21,#b8431c);
-	border-color: #b8431c;
-	border-bottom-color: #b8431c;
+	background-color: #c13046;
+	background-image: -webkit-gradient(linear,left top,left bottom,from(#e23749),to(#c13046));
+	background-image: -webkit-linear-gradient(top,#e23749,#c13046);
+	background-image: -moz-linear-gradient(top,#e23749,#c13046);
+	background-image: -ms-linear-gradient(top,#e23749,#c13046);
+	background-image: -o-linear-gradient(top,#e23749,#c13046);
+	background-image: linear-gradient(to bottom,#e23749,#c13046);
+	border-color: #c13046;
+	border-bottom-color: #c13046;
 	box-shadow: inset 0 1px 0 rgba(230, 160, 120, 0.5);
 	color: #fff;
 	text-decoration: none;
@@ -99,12 +100,12 @@ input[type="submit"],input[type="reset"],button{
 	-moz-transition:.1s linear;
 }
 input[type="submit"]:hover,input[type="reset"]:hover,button:hover{
-	background-image: -webkit-gradient(linear,left top,left bottom,from(#da5e35),to(#b8431c));
-	background-image: -webkit-linear-gradient(top,#da5e35,#b8431c);
-	background-image: -moz-linear-gradient(top,#da5e35,#b8431c);
-	background-image: -ms-linear-gradient(top,#da5e35,#b8431c);
-	background-image: -o-linear-gradient(top,#da5e35,#b8431c);
-	background-image: linear-gradient(to bottom,#da5e35,#b8431c);
+	background-image: -webkit-gradient(linear,left top,left bottom,from(#e84d64),to(#c13046));
+	background-image: -webkit-linear-gradient(top,#e84d64,#c13046);
+	background-image: -moz-linear-gradient(top,#e84d64,#c13046);
+	background-image: -ms-linear-gradient(top,#e84d64,#c13046);
+	background-image: -o-linear-gradient(top,#e84d64,#c13046);
+	background-image: linear-gradient(to bottom,#e84d64,#c13046);
 	cursor: pointer;
 }
 input[type="submit"]:active,input[type="reset"]:active,button:active{
